# clef24-mibi-bioasq-

./: Dockerfile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
code/dev/notebooks/: test_snippet_extraction.ipynb
mibi/: __init__.py  __main__.py  builder.py  metrics.py  model.py  test_builder.py  test_json_schema.py  test_pickleable.py
mibi/cli/: __init__.py  compile.py  index.py  parse.py  run.py  utils.py
mibi/modules/: __init__.py  build.py  helpers.py  incremental.py  independent.py  mock.py  standard.py  test_incremental_json_schema.py
mibi/modules/documents/: pipelines.py  pubmed.py  pyterrier.py
mibi/modules/exact_answer/: llm.py  test_llm_json_schema.py
mibi/modules/ideal_answer/: llm.py  test_llm_json_schema.py
mibi/modules/snippets/: pipelines.py  pyterrier.py
mibi/utils/: elasticsearch.py  elasticsearch_pyterrier.py  language_models.py  pyterrier.py  rate_limiting.py
notebooks/: get_pubmed_documents.py  test_llm_rerank.ipynb  test_llms.ipynb  test_pipeline.ipynb  test_pipeline_gpt.ipynb  test_pipeline_mistral.ipynb  test_pubmed_api.ipynb  test_snippet_extraction.ipynb  test_templates.py  test_utils.py  word-counts.ipynb
scripts/: extract_snippets.py  generate_answers.py  prompts.py
scripts/utils/: answers.py  client.py  config.py  snippets.py
submissions/: README.md  bioasq_task_12b_phase_a+_batch_1_mibi_rag_abstract.json  bioasq_task_12b_phase_a+_batch_1_mibi_rag_snippet.json  bioasq_task_12b_phase_a+_batch_2_mibi_rag_snippets.json  bioasq_task_12b_phase_a+_batch_3_mibi_rag_3.json  bioasq_task_12b_phase_a+_batch_3_mibi_rag_4.json  bioasq_task_12b_phase_a+_batch_3_mibi_rag_5.json  bioasq_task_12b_phase_a+_batch_3_mibi_rag_abstract.json  bioasq_task_12b_phase_a+_batch_3_mibi_rag_snippets.json  bioasq_task_12b_phase_a+_batch_4_mibi_rag_4.json  bioasq_task_12b_phase_a+_batch_4_mibi_rag_snippets.json  bioasq_task_12b_phase_a_batch_1_mibi_rag_abstract.json  bioasq_task_12b_phase_a_batch_1_mibi_rag_snippet.json  bioasq_task_12b_phase_a_batch_2_mibi_rag_abstract.json  bioasq_task_12b_phase_a_batch_3_mibi_rag_3.json  bioasq_task_12b_phase_a_batch_3_mibi_rag_4.json  bioasq_task_12b_phase_a_batch_3_mibi_rag_5.json  bioasq_task_12b_phase_a_batch_3_mibi_rag_abstract.json  bioasq_task_12b_phase_a_batch_3_mibi_rag_snippets.json  bioasq_task_12b_phase_a_batch_4_mibi_rag_3.json  bioasq_task_12b_phase_a_batch_4_mibi_rag_5.json  bioasq_task_12b_phase_a_batch_4_mibi_rag_abstract.json  bioasq_task_12b_phase_b_batch_1_mibi_rag_abstract.json  bioasq_task_12b_phase_b_batch_1_mibi_rag_snippet.json  bioasq_task_12b_phase_b_batch_2_mibi_rag_abstract.json  bioasq_task_12b_phase_b_batch_2_mibi_rag_snippets.json  bioasq_task_12b_phase_b_batch_3_mibi_rag_3.json  bioasq_task_12b_phase_b_batch_3_mibi_rag_4.json  bioasq_task_12b_phase_b_batch_3_mibi_rag_5.json  bioasq_task_12b_phase_b_batch_4_mibi_rag_3.json  bioasq_task_12b_phase_b_batch_4_mibi_rag_4.json  bioasq_task_12b_phase_b_batch_4_mibi_rag_5.json  bioasq_task_12b_phase_b_batch_4_mibi_rag_abstract.json  bioasq_task_12b_phase_b_batch_4_mibi_rag_snippets.json
