[project]
name = "mibi-bioasq"
authors = [
    {name = "Jan Heinrich Reimer", email = "heinrich.reimer@uni-jena.de"},
    {name = "Alexander Bondarenko", email = "alexander.bondarenko@uni-jena.de"},
    {name = "Adrian Viehweger", email = "adrian.viehweger@medizin.uni-leipzig.de"},
    {name = "Matthias Hagen", email = "matthias.hagen@uni-jena.de"},
]
description = "MiBi at BioASQ 2024"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "importlib-metadata~=6.0",
    "instructor~=0.4.5",
    "jupyter~=1.0",
    "loguru~=0.7.2",
    "nltk~=3.8",
    "openai~=1.3",
    "pandas~=2.0",
    "python-dotenv~=1.0",
    "tqdm~=4.64",
    "torch~=2.0",
    "transformers~=4.31",    
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pandas-stubs~=2.0",
    "pytest~=8.0",
    "pytest-cov~=4.0",
    "ruff~=0.2.1",
    "types-tqdm~=4.66",
]

[project.urls]
"Homepage" = "https://github.com/alebondarenko/mibi-bioasq"
"Bug Tracker" = "https://github.com/alebondarenko/mibi-bioasq/issues"

[project.scripts]
mibi = "mibi.cli:cli"

[build-system]
requires = [
    "setuptools~=69.0",
    "setuptools-scm~=8.0",    
]

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
